# math-lib

./: .gitignore  CMakeLists.txt  CorrectFftShift.cs  Dockerfile  FftShiftBenchmark.cs  FftShiftOptimizations.csproj  FixedFftShiftTest.cs  Gemfile  Get-DirectorySize-Robocopy.ps1  Get-DirectorySize.ps1  OptimizedFftShift.cs  Program.cs  README-PowerShell.md  README.md  SimpleFftShiftTest.cs  SimpleTest.csproj  TestProgram.cs  dev.sh  modified_code.cs  requirements.txt  start_up.sh  test-file.txt
.sass-cache/4d2ed5aaf864abee47a76cd0c4c67abb853bbd3b/: minima.scssc
.sass-cache/835d2d261a2e28ec91d2b7612b40d15e36a3de96/: _base.scssc  _layout.scssc  _syntax-highlighting.scssc
FftShiftTest/: FftShiftTest.csproj  Program.cs
ImageProcessorTest/: ImageProcessorTest.csproj  OpenCvConfig.cs  OptimizedImageProcessor.cs  Program.cs  SimpleTest.cs  SupportingClasses.cs  Tests.cs
_posts/: 2024-03-22-welcome-to-jekyll.markdown
_site/: feed.xml  index.html
_site/jekyll/update/2024/03/22/: welcome-to-jekyll.html
app/: load_data.py  start_up.sh
examples/: example.c
include/mathlib/: mathlib.h
src/: mathlib.c
tests/: test_mathlib.c
